# hookfreight-py

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
examples/: basic_usage.py  manage_endpoints.py  monitor_queue.py  retry_failed_deliveries.py
hookfreight/: __init__.py  client.py  errors.py  http.py  pagination.py  types.py
hookfreight/resources/: __init__.py  _common.py  apps.py  deliveries.py  endpoints.py  events.py
